infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      # telling our deployment the name of the pod we are referring to
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      # defining all the containers that will run in our pod
      containers:
        - name: client
          # we are using the image we created from our docker file and pushed to docker hub
          image: aosborne17/client:latest
---
# adding the three dashes allows us to create multiple objects in one yaml file
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  # tellling our cluster ip service to direct incoming traffic to the client pod
  selector:
    app: client
  type: ClusterIP
  ports:
    - name: client
      protocol: TCP
      # by default next js listens on 3000
      targetPort: 3000
      port: 3000
